# euler-hs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  cabal.project  euler-hs.cabal  flake.nix
.github/workflows/: build.yml  haskell.yml
benchmark/: Main.hs  README.md
benchmark/EulerHS/: Test.hs
benchmark/EulerHS/KVConnector/: UtilsTH.hs
benchmark/scripts/: setup-redis-cluster.sh  teardown-redis-cluster.sh
src/EulerHS/: Api.hs  BinaryString.hs  CachedSqlDBQuery.hs  Common.hs  Interpreters.hs  JsonbFallback.hs  Language.hs  Masking.hs  Options.hs  Prelude.hs  Runtime.hs  Types.hs
src/EulerHS/Extra/: Aeson.hs  AltValidation.hs  Combinators.hs  EulerDB.hs  Language.hs  Regex.hs  Test.hs  Time.hs  URLSanitization.hs  Validation.hs
src/EulerHS/Extra/Monitoring/: Flow.hs  Types.hs
src/EulerHS/Framework/: Interpreter.hs  Language.hs  Runtime.hs
src/EulerHS/KVConnector/: Compression.hs  DBSync.hs  Encoding.hs  Flow.hs  Metrics.hs  Types.hs  Utils.hs
src/EulerHS/KVConnector/Helper/: Utils.hs
src/EulerHS/KVConnector/InMemConfig/: Flow.hs  Types.hs
src/EulerHS/KVDB/: Interpreter.hs  Language.hs  Types.hs
src/EulerHS/Logger/: Interpreter.hs  Language.hs  Runtime.hs  TinyLogger.hs  Types.hs
src/EulerHS/PubSub/: Interpreter.hs  Language.hs
src/EulerHS/SqlDB/: Interpreter.hs  Language.hs  MySQL.hs  Postgres.hs  Types.hs
test-jsonb-live/: Main.hs
test/db/SQLDB/TestData/: Connections.hs  Types.hs  clubdata.sqlite.sql
test/db/SQLDB/TestData/Scenarios/: MySQL.hs
test/db/SQLDB/Tests/: MySQLDBSpec.hs  PostgresDBSpec.hs  QueryExamplesSpec.hs
test/extra/: Main.hs  Options.hs
test/jsonb-live/: JsonbLiveTests.hs
test/kv-live/: KvConnectorTH.hs  KvLiveTests.hs  Schema.hs
test/language/: ArtSpec.hs  CachedDBSpec.hs  Client.hs  DBSetup.hs  FlowSpec.hs  HttpAPISpec.hs  KVDBArtSpec.hs  Main.hs  MaskingSpec.hs  PubSubSpec.hs  SQLArtSpec.hs  Scenario1.hs
test/language/EulerHS/TestData/: Types.hs
test/language/EulerHS/Testing/: Types.hs
test/language/EulerHS/Testing/Flow/: Interpreter.hs
test/language/KV/: FindOneSpec.hs  FlowHelper.hs  InsertSpec.hs  TestHelper.hs
test/language/KV/TestSchema/: Mesh.hs  ServiceConfiguration.hs  ThUtils.hs
test/sorted-set-live/: SortedSetTests.hs
test/suite/: EncodingTests.hs  Main.hs
testDB/: Main.hs
testDB/KVDB/: KVDBSpec.hs
testDB/SQLDB/TestData/: Connections.hs
testDB/SQLDB/TestData/Scenarios/: Postgres.hs
testDB/SQLDB/Tests/: QueryExamplesSpec.hs  SQLiteDBSpec.hs
