cabal-version: 3.0
name:          euler-hs
version:       3.0.0
synopsis:      The Flow framework for Euler.
description:
homepage:      https://github.com/juspay/euler-hs
license:
author:        Juspay Technologies Pvt Ltd
maintainer:    koz.ross@juspay.in
copyright:     (C) Juspay Technologies Pvt Ltd 2019-2020
category:      Euler
build-type:    Simple
tested-with:   GHC ==8.8.4, GHC ==8.10.7

source-repository head
  type:     git
  location: https://github.com/juspay/euler-hs

common common-lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -fplugin=RecordDotPreprocessor
    "-Wwarn=ambiguous-fields"

  build-depends:
    , base                     
    , record-dot-preprocessor  
    , record-hasfield
    , euler-events-hs          

  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    TupleSections
    TypeApplications
    TypeFamilies
    TypeSynonymInstances
    UndecidableInstances

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    EulerHS.CachedSqlDBQuery
    EulerHS.JsonbFallback
    EulerHS.Extra.AltValidation
    EulerHS.Extra.Aeson
    EulerHS.Extra.Combinators
    EulerHS.Extra.EulerDB
    EulerHS.Extra.Test
    EulerHS.Extra.Time
    EulerHS.Extra.Validation
    EulerHS.Interpreters
    EulerHS.Language
    EulerHS.Prelude
    EulerHS.Runtime
    EulerHS.Types
    EulerHS.SqlDB.Language
    EulerHS.KVConnector.DBSync
    EulerHS.KVConnector.Compression 
    EulerHS.KVConnector.Encoding
    EulerHS.KVConnector.Flow
    EulerHS.KVConnector.Metrics
    EulerHS.KVConnector.Types
    EulerHS.Logger.Types
    EulerHS.KVConnector.InMemConfig.Types
    EulerHS.KVConnector.Utils
    EulerHS.KVConnector.Helper.Utils
    EulerHS.Extra.Regex
    EulerHS.Masking
    EulerHS.Extra.URLSanitization
    EulerHS.Extra.Monitoring.Types
    EulerHS.Extra.Monitoring.Flow
    EulerHS.Api

  other-modules:
    EulerHS.BinaryString
    EulerHS.Common
    EulerHS.Extra.Language
    EulerHS.Framework.Interpreter
    EulerHS.Framework.Language
    EulerHS.Framework.Runtime
    EulerHS.HttpAPI
    EulerHS.KVDB.Interpreter
    EulerHS.KVDB.Language
    EulerHS.KVDB.Types
    EulerHS.Logger.Interpreter
    EulerHS.Logger.Language
    EulerHS.Logger.Runtime
    EulerHS.Logger.TinyLogger
    EulerHS.Options
    EulerHS.PubSub.Interpreter
    EulerHS.PubSub.Language
    EulerHS.SqlDB.Interpreter
    EulerHS.SqlDB.MySQL
    EulerHS.SqlDB.Postgres
    EulerHS.SqlDB.Types 
    EulerHS.KVConnector.InMemConfig.Flow

  build-depends:
    , QuickCheck
    , aeson
    , aeson-pretty
    , zstd
    , base64-bytestring
    , beam-core             
    , beam-mysql            
    , beam-postgres         
    , beam-sqlite           
    , bytestring
    , case-insensitive
    , casing
    , cereal
    , connection
    , containers
    , cryptostore
    , ctrie
    , data-default
    , dlist
    , exceptions
    , extra
    , fmt
    , formatting
    , free
    , generic-deriving
    , generic-lens
    , hedis
    , http-api-data
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , juspay-extra            
    , lrucache
    , lrucaching
    , mysql-haskell         
    , named
    , newtype-generics
    , nonempty-containers
    , nonempty-vector
    , optics-core
    , pem
    , postgresql-simple
    , process
    , profunctors
    , random
    , reflection
    , resource-pool
    , safe
    , scientific
    , sequelize             
    , servant
    , servant-client        
    , servant-client-core   
    , servant-server        
    , sqlite-simple
    , stm
    , store
    , string-conversions
    , text
    , time
    , tinylog
    , tls
    , transformers
    , unagi-chan
    , universum
    , unordered-containers
    , utf8-string
    , uuid
    , validation
    , validation-selective
    , vector
    , x509
    , x509-store
    , x509-system
    , x509-validation
    , safe-exceptions
    , pcre-heavy
    , pcre-light
    , attoparsec
    , tasty-hunit
    , mtl

  hs-source-dirs:  src

flag enable-tests
  description: Enable building the opt-in / infra-heavy suites (language, jsonb).
  default: False

-- The one command: `cabal test`.
-- Self-managing: checks Postgres + Redis are up (prints how to start them if
-- not), auto-creates the euler_sorted_test DB, and each suite cleans its own PG
-- rows + Redis keys. Runs kv-live + encoding + recache + jsonb + db + extra.
-- Plain `cabal build` does NOT build this (or any test-suite) — only the library.
test-suite tests
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test/suite test/kv-live test/db test/extra test/jsonb-live
  other-modules:
    EncodingTests
    KvConnectorTH
    Schema
    KvLiveTests
    JsonbLiveTests
    Options
    SQLDB.TestData.Connections
    SQLDB.TestData.Scenarios.SQLite
    SQLDB.TestData.Types
    SQLDB.Tests.QueryExamplesSpec
    SQLDB.Tests.SQLiteDBSpec
  build-depends:
    , aeson
    , async
    , base16-bytestring
    , beam-core
    , beam-postgres
    , beam-sqlite
    , bytestring
    , casing
    , cereal
    , containers
    , euler-hs
    , hspec
    , postgresql-simple
    , process
    , sequelize
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
  ghc-options:    -threaded

test-suite language
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  if !flag(enable-tests)
    buildable: False
  other-modules:
    ArtSpec
    -- CachedDBSpec
    Client
    Common
    DBSetup
    EulerHS.TestData.Types
    EulerHS.Testing.Flow.Interpreter
    EulerHS.Testing.Types
    HttpAPISpec
    FlowSpec
    KVDBArtSpec
    MaskingSpec
    PubSubSpec
    Scenario1
    SQLArtSpec
    KV.FlowHelper
    KV.TestSchema.ServiceConfiguration
    KV.InsertSpec
    KV.TestSchema.ThUtils
    KV.TestSchema.Mesh
    KV.TestHelper
    KV.FindOneSpec

  build-depends:
    , aeson
    , aeson-pretty
    , zstd
    , async
    , beam-core
    , beam-sqlite
    , beam-mysql
    , bytestring
    , containers
    , data-default
    , directory
    , euler-hs
    , extra
    , filepath
    , generic-arbitrary
    , generic-lens
    , hedis
    , hspec
    , http-client
    , http-client-tls
    , named
    , process
    , QuickCheck
    , quickcheck-instances
    , random
    , safe-exceptions
    , sequelize
    , servant
    , servant-client
    , servant-mock
    , servant-server
    , string-conversions
    , text
    , tls
    , typed-process
    , unordered-containers
    , uuid
    , vector
    , warp
    , warp-tls
    , x509-store
    , tls
    , connection
    , time
    , tinylog
    , template-haskell
    , casing
    , scientific
    , hspec-core
    , cereal

  ghc-options:    -threaded -O2
  hs-source-dirs: test/language

